# 148-winter-2025-final-project-team-11

./: README.md  package.xml  setup.py
ECE148-ESP32-S3-Platformio/: platformio.ini
ECE148-ESP32-S3-Platformio/include/: pindefinitions.h
ECE148-ESP32-S3-Platformio/src/: main.cpp
ECE148_Mainboard_PCB/: ADXL343.kicad_sch  CustomSymbols.bak  CustomSymbols.kicad_sym  ECE148_Mainboard.kicad_pcb  ECE148_Mainboard.kicad_prl  ECE148_Mainboard.kicad_pro  ECE148_Mainboard.kicad_sch  ESP32.kicad_sch  LEDs.kicad_sch  MyLibrary.bak  MyLibrary.kicad_sym  Outputs.kicad_sch  PWR_&_USB.kicad_sch  Power_Latch.kicad_sch  RCCar.kicad_sch  Sensors.kicad_sch  Sensors.kicad_sch-bak  bom.csv  fp-info-cache  sym-lib-table
ECE148_Mainboard_PCB/CustomFootprints.pretty/: Traxxas Link.step  TraxxasLink.kicad_mod
ECE148_Mainboard_PCB/bom/: ibom.html
ECE148_Mainboard_PCB/exports/: ECE148_Mainboard-B_Cu.gbr  ECE148_Mainboard-B_Mask.gbr  ECE148_Mainboard-B_Paste.gbr  ECE148_Mainboard-B_Silkscreen.gbr  ECE148_Mainboard-Edge_Cuts.gbr  ECE148_Mainboard-F_Cu.gbr  ECE148_Mainboard-F_Mask.gbr  ECE148_Mainboard-F_Paste.gbr  ECE148_Mainboard-F_Silkscreen.gbr  ECE148_Mainboard-In1_Cu.gbr  ECE148_Mainboard-In2_Cu.gbr  ECE148_Mainboard-NPTH.drl  ECE148_Mainboard-PTH.drl  ECE148_Mainboard-job.gbrjob
ECE148_Mainboard_PCB/production/: bom.csv  designators.csv  netlist.ipc  (+1 more)
config/: default_params.yaml
launch/: .car_pursuit_launch.py.swp  car_pursuit_launch.py
resource/: robocar_visual_pursuit_pkg
robocar_visual_pursuit_pkg/: car_detection_node.py  lane_guidance_node.py  led_controller_node.py
(+6 files in other folders)
