<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocar_visual_pursuit_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 package for RC car visual pursuit using DepthAI and YOLO</description>
  <maintainer email="djnighti@ucsd.edu">root</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rcl_interfaces</depend>
  <depend>smbus2</depend>
  
  <!-- Add depthai dependency - this will need to be installed separately -->
  <exec_depend>python3-depthai</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
